--- a/path/index.html
+++ b/path/index.html
@@ -93,8 +93,7 @@
         const menuItems = [
             { id: 1, name: "อาหาร A", price: 100 },
             { id: 2, name: "อาหาร B", price: 150 },
-            { id: 3, name: "อาหาร C", price: 120 },
-            { id: 4, name: "อาหาร D", price: 200 }
+            { id: 3, name: "อาหาร C", price: 120 }
         ];
 
         let cart = [];
