--- a/path/index.html
+++ b/path/index.html
@@ -145,7 +145,7 @@
         }
 
         function viewCart() {
-            alert("You have the following food in your basket::\n" + cart.map(item => `${item.name}: ${item.quantity} ชิ้น`).join('\n'));
+            alert("You have the following food in your basket::\n" + cart.map(item => `${item.name}: ${item.quantity}`).join('\n'));
         }
 
         function viewCart() {
@@ -155,7 +155,7 @@
             }
 
             // สร้างข้อความที่จะแสดงผลใน LINE
-            const orderDetails = cart.map(item => `${item.name}: ${item.quantity} ชิ้น`).join('\n');
+            const orderDetails = cart.map(item => `${item.name}: ${item.quantity}`).join('\n');
 
             // ส่งคำสั่งซื้อไปยัง Cloud Function
             fetch(' https://dfa7-171-96-204-194.ngrok-free.app/back-end-senior/us-central1/orderFood', {  // URL ของ Cloud Function ที่จะเชื่อมกับ LINE API
