--- a/path/index.html
+++ b/path/index.html
@@ -177,7 +177,7 @@
                 })
                 .catch(error => {
                     console.error('Error:', error);
-                    alert('There was an error ordering food.');
+                    alert('There was an error.');
                 });
         }
 
