--- a/path/index.html
+++ b/path/index.html
@@ -3,188 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>สั่งอาหาร</title>
+    <title>Promotion Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
         }
 
-        .menu-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
+        header {
+            background-color: #ff6347;
+            color: white;
             padding: 20px;
-        }
-
-        .menu-item {
-            background-color: white;
-            width: 45%;
-            margin: 10px;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
 
-            .menu-item h3 {
-                margin: 10px 0;
+        .promotion-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .promotion-item {
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin: 20px;
+            padding: 20px;
+            width: 300px;
+            text-align: center;
+        }
+
+            .promotion-item img {
+                width: 100%;
+                height: auto;
+                border-radius: 10px;
             }
 
-        .quantity-control {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 10px;
-        }
-
-            .quantity-control button {
-                width: 30px;
-                height: 30px;
-                font-size: 18px;
-                margin: 0 10px;
+            .promotion-item h3 {
+                margin: 15px 0;
             }
 
-        .cart {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: #4CAF50;
-            color: white;
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-        }
+            .promotion-item p {
+                color: #555;
+            }
 
-        .cart-count {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            background-color: red;
-            border-radius: 50%;
-            width: 20px;
-            height: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 12px;
-        }
+            .promotion-item button {
+                background-color: #ff6347;
+                color: white;
+                padding: 10px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+
+                .promotion-item button:hover {
+                    background-color: #ff4500;
+                }
     </style>
 </head>
 <body>
-    <div class="menu-container" id="menuContainer">
-        <!-- Items จะถูกเพิ่มจาก JavaScript -->
+
+    <header>
+        <h1>Special Promotions</h1>
+    </header>
+
+    <div class="promotion-container">
+        <div class="promotion-item">
+            <img src="https://via.placeholder.com/300" alt="Promotion Image 1">
+            <h3>Buy 1 Get 1 Free</h3>
+            <p>Enjoy our limited time offer! Buy one and get another one free on selected items.</p>
+            <button>Claim Now</button>
+        </div>
+
+        <div class="promotion-item">
+            <img src="https://via.placeholder.com/300" alt="Promotion Image 2">
+            <h3>20% Discount</h3>
+            <p>Get 20% off your purchase on all items this weekend only. Don't miss out!</p>
+            <button>Shop Now</button>
+        </div>
     </div>
 
-    <div class="cart" onclick="viewCart()">
-        <span class="cart-count" id="cartCount">0</span>
-        🛒
-    </div>
-
-    <script>
-        const menuItems = [
-            { id: 1, name: "A", price: 100 },
-            { id: 2, name: "B", price: 150 },
-            { id: 3, name: "C", price: 120 },
-            { id: 4, name: "D", price: 200 }
-        ];
-
-        let cart = [];
-
-        function renderMenu() {
-            const menuContainer = document.getElementById('menuContainer');
-            menuItems.forEach(item => {
-                const menuItem = document.createElement('div');
-                menuItem.classList.add('menu-item');
-                menuItem.innerHTML = `
-                        <h3>${item.name}</h3>
-                        <p>ราคา: ${item.price} บาท</p>
-                        <div class="quantity-control">
-                            <button onclick="decreaseQuantity(${item.id})">-</button>
-                            <span id="quantity-${item.id}">0</span>
-                            <button onclick="increaseQuantity(${item.id})">+</button>
-                        </div>
-                    `;
-                menuContainer.appendChild(menuItem);
-            });
-        }
-
-        function increaseQuantity(id) {
-            const item = cart.find(i => i.id === id);
-            if (item) {
-                item.quantity++;
-            } else {
-                const menuItem = menuItems.find(i => i.id === id);
-                cart.push({ ...menuItem, quantity: 1 });
-            }
-            document.getElementById(`quantity-${id}`).textContent = cart.find(i => i.id === id).quantity;
-            updateCartCount();
-        }
-
-        function decreaseQuantity(id) {
-            const item = cart.find(i => i.id === id);
-            if (item && item.quantity > 0) {
-                item.quantity--;
-                document.getElementById(`quantity-${id}`).textContent = item.quantity;
-                if (item.quantity === 0) {
-                    cart = cart.filter(i => i.id !== id);
-                }
-                updateCartCount();
-            }
-        }
-
-        function updateCartCount() {
-            const cartCount = cart.reduce((sum, item) => sum + item.quantity, 0);
-            document.getElementById('cartCount').textContent = cartCount;
-        }
-
-        //function viewCart() {
-        //    alert("You have the following food in your basket::\n" + cart.map(item => `${item.name}: ${item.quantity}`).join('\n'));
-        //}
-
-        function viewCart() {
-            if (cart.length === 0) {
-                alert("Empty");
-                return;
-            }
-
-            // สร้างข้อความที่จะแสดงผลใน LINE
-            const orderDetails = cart.map(item => `${item.name}: ${item.quantity}`).join('\n');
-
-            // ส่งคำสั่งซื้อไปยัง Cloud Function
-            fetch(' https://d472-171-96-204-194.ngrok-free.app/back-end-senior/us-central1/orderFood', {  // URL ของ Cloud Function ที่จะเชื่อมกับ LINE API
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    message: `Customer orders food:\n${orderDetails}` // ข้อความที่จะแสดงใน LINE
-                })
-            })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {  // ตรวจสอบว่าข้อมูลตอบกลับจาก Cloud Function มี success หรือไม่
-                        alert('Success');
-                    } else {
-                        alert('There was an error ordering food.');
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('There was an error.');
-                });
-        }
-
-
-
-        renderMenu();
-    </script>
 </body>
 </html>
+
 
