--- a/path/index.html
+++ b/path/index.html
@@ -72,14 +72,14 @@
 
     <div class="promotion-container">
         <div class="promotion-item">
-            <img src="https://drive.google.com/file/d/1A7qBLJt-4bQnHnOa6XFhN-atZjhwMvsm/view?usp=drive_link" alt="Promotion Image 1">
+            <img src="images/promotion1.jpg" alt="Promotion Image 1">
             <h3>Buy 1 Get 1 Free</h3>
             <p>Enjoy our limited time offer! Buy one and get another one free on selected items.</p>
             <button>Claim Now</button>
         </div>
 
         <div class="promotion-item">
-            <img src="https://drive.google.com/file/d/1x_zc87wb62r22msJFalusj_zfHdLLBOY/view?usp=drive_link" alt="Promotion Image 2">
+            <img src="images/promotion2.jpg" alt="Promotion Image 2">
             <h3>Menu set</h3>
             <p>Spaghetti (Main Dish)<br>French Fried (Side Dish)<br>Matcha & Ice Lemonade<br /> Don't miss out!</p>
             <button>Shop Now</button>
