--- a/path/index.html
+++ b/path/index.html
@@ -13,7 +13,7 @@
         }
 
         header {
-            background-color: #ff6347;
+            background-color: #21B94E;
             color: white;
             padding: 20px;
             text-align: center;
@@ -51,7 +51,7 @@
             }
 
             .promotion-item button {
-                background-color: #ff6347;
+                background-color: #21B94E;
                 color: white;
                 padding: 10px;
                 border: none;
